Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -61,7 +61,6 @@
 \newcommand{\dO}{$\delta^{18}$O\xspace}
 \newcommand{\SrSr}{$^{87}$Sr/$^{86}$Sr\xspace}
 \newcommand{\permil}{\textperthousand\xspace}
-\newcommand{\dsil}{$d$\xspace}
 \newcommand{\UPb}{$^{206}$Pb/$^{238}$U\xspace}
 \newcommand{\pCOtwo}{\textit{p}CO$_{2}$\xspace}
 \newcommand{\COtwo}{CO$_{2}$\xspace}
@@ -76,7 +75,7 @@
 \begin{document}
 
 \begin{flushleft}
-{\Large \textbf{Growth of the broader Indonesia archipelago as a driver for Neogene cooling}}
+{\Large \textbf{Growth of the broader Indonesia Archipelago as a driver for Neogene cooling}}
 
 Yuem Park\textsuperscript{1},
 Nicholas L. Swanson-Hysell\textsuperscript{1},
@@ -98,11 +97,11 @@ Yves Godd\'eris\textsuperscript{3}
 
 \linenumbers
 
-The broader Indonesia archipelago has an out-sized influence on modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \citep{Hartmann2009a, Hartmann2014a}. There has been significant growth of land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system (\citealp{Molnar2015a}; Fig. \ref{Fig:indo_growth}). This collision between the Australian-Indian and Eurasian plates and intervening arc terranes has led to the emergence of Indonesia and New Guinea and the exhumation of large supra-subduction ophiolites and associated forearcs in the warm, wet tropics.
+The broader Indonesia Archipelago has an out-sized influence on modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \citep{Hartmann2009a, Hartmann2014a}. There has been significant growth of land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system (\citealp{Molnar2015a}; Fig. \ref{Fig:indo_growth}). This collision between the Australian-Indian and Eurasian plates and intervening arc terranes has led to the emergence of Indonesia and New Guinea and the exhumation of large supra-subduction ophiolites and associated forearcs in the warm, wet tropics.
 
 Given that the region is a modern-day hot spot of chemical weathering and \COtwo consumption \citep{Hartmann2009a}, what effect has growth of the broader Indonesian archipelago had on Earth's climate state and what would \pCOtwo be on Earth if the region was not there at all? Based on paleogeographic reconstructions of arc-continent collisions through time, \citet{Macdonald2019a} proposed that arc-continent collisions in the tropics are responsible for increasing planetary weatherability, lowering \pCOtwo and causing the onset of glacial climate states. There has been significant planetary cooling since the Mid-Miocene Climatic Optimum leading to the onset of northern hemisphere glaciation, in addition to Antarctic glaciation, over the past few million years \citep{Shackleton1984a}. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for northern hemisphere glaciation being significantly lower at $\sim$280~ppm \citep{DeConto2008a} providing an explanation for the delay between southern hemisphere and bipolar glaciation. We seek to evaluate the hypothesis that the growth of the broader Indonesian archipelago has played a significant role in lowering \pCOtwo thereby driving this cooling and the development of northern hemisphere ice sheets.
 
-Over geologic time-scales, \COtwo enters Earth's ocean/atmosphere system primarily via volcanism and metamorphic degassing of the solid Earth, and leaves it primarily through the chemical weathering of silicate rocks, which delivers alkalinity and cations to the ocean that ultimately result in the consumption of carbon via the precipitation of carbonate rocks \citep{Kump2000a}. However, assessing the effect of the growth of the broader Indonesia archipelago on Earth's \pCOtwo levels can not be determined simply through assessing the present-day chemical weathering fluxes. As \COtwo sinks are removed and \COtwo rises, there will be increases in temperature and invigorated hydrological cycling that causes other weathering sinks to increase. The steady-state \pCOtwo of Earth is set by the \pCOtwo level at which the sinks of \COtwo are equal to the sources. The magnitude of the silicate weathering \COtwo sink can be equal to the magnitude of the source at lower \pCOtwo on a planet with relatively high weatherability than on a planet where it is lower \citep{Kump1997a}.
+Over geologic time-scales, \COtwo enters Earth's ocean/atmosphere system primarily via volcanism and metamorphic degassing of the solid Earth, and leaves it primarily through the chemical weathering of silicate rocks, which delivers alkalinity and cations to the ocean that ultimately result in the consumption of carbon via the precipitation of carbonate rocks \citep{Kump2000a}. However, assessing the effect of the growth of the broader Indonesia Archipelago on Earth's \pCOtwo levels can not be determined simply through assessing the present-day chemical weathering fluxes. As \COtwo sinks are removed and \COtwo rises, there will be increases in temperature and invigorated hydrological cycling that causes other weathering sinks to increase. The steady-state \pCOtwo of Earth is set by the \pCOtwo level at which the sinks of \COtwo are equal to the sources. The magnitude of the silicate weathering \COtwo sink can be equal to the magnitude of the source at lower \pCOtwo on a planet with relatively high weatherability than on a planet where it is lower \citep{Kump1997a}.
 
 %Imbalances between the magnitude of these source and sink fluxes will cause \pCOtwo to change until the silicate weathering negative feedback (in which elevated \pCOtwo leads to higher temperatures and a more intense hydrological cycle that enhances chemical weathering of silicate rocks and therefore the consumption of \COtwo, and vice versa) stabilizes \pCOtwo at a new steady state value \citep{Walker1981a}. One way to perturb steady state \pCOtwo is to change global weatherability - the sum of factors other than climate that contribute to the chemical weathering of rocks and associated \COtwo consumption, such as lithology \citep{Gaillardet1999a, Dessert2003a}, topography \citep{Maher2014a, Maffre2018a}, and paleolatitude \citep{Swanson-Hysell2017a}. \COtwo input from the solid Earth, assuming that it remains constant, can be removed via silicate weathering at a lower \pCOtwo on a planet with relatively high weatherability than on a planet where it is lower \citep{Kump1997a}.
 
@@ -118,9 +117,9 @@ Topography, climate, and lithology all play important roles in modulating chemic
 
 % \subsection*{Paleoshoreline data}
 
-We use geological and paleoshoreline data to quantify the changes in the area of the broader Indonesia archipelago over the past 20~m.y. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are greater than $\sim$200~km, and we also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Carbonate strata and thin-bedded siliciclastic strata were interpreted to represent a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as evidence for a subaerial environment. Taken together, these constraints delineate the position of shorelines. For the island of Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a} and for New Guinea we followed work of \citet{Norvick2003a, Cloos2005a, Gold2017a}. While there are difference in data sources and paleoshoreline outlines from \cite{Molnar2015a}, the calculated area at 5~Ma is quite similar.
+We use geological and paleoshoreline data to quantify the changes in the area of the broader Indonesia Archipelago over the past 20~m.y. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are greater than $\sim$200~km, and we also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Carbonate strata and thin-bedded siliciclastic strata were interpreted to represent a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as evidence for a subaerial environment. Taken together, these constraints delineate the position of shorelines. For the island of Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a} and for New Guinea we followed work of \citet{Norvick2003a, Cloos2005a, Gold2017a}. While there are difference in data sources and paleoshoreline outlines from \cite{Molnar2015a}, the calculated area at 5~Ma is quite similar.
 
-While there has been an increase in land area associated with arc-continent collision, there has also been a decrease in land area associated with subsidence of the Sunda Shelf \citep{Sarr2019a}. Although the majority of the Sunda Shelf is currently submerged, large portions of this low-relief area of continental crust were likely emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum \citep{Halls2002a}. Similarities in terrestrial biotas of Borneo and mainland Southeast Asia suggest the existence of land bridges on the Sunda Shelf throughout the Miocene \citep{Moss1998a}. During the Eocene through early Miocene, the rifting of the South China Sea resulted in subsidence \citep{Morley2013a} and recent subsidence is interpreted to be a result of dynamic topography, triggered by subduction-related mantle flow \citep{Sarr2019a}. In the Miocene, this region was likely a mixture of crystalline lithologies and siliciclastic sediments similar to eastern Borneo. The relatively low-relief of the region contrasts with the high-relief and mafic lithologies of the broader Indonesia archipelago. We incorporate land area associated with the subsided Sunda Shelf into our modeling.
+While there has been an increase in land area associated with arc-continent collision, there has also been a decrease in land area associated with subsidence of the Sunda Shelf \citep{Sarr2019a}. Although the majority of the Sunda Shelf is currently submerged, large portions of this low-relief area of continental crust were likely emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum \citep{Halls2002a}. Similarities in terrestrial biotas of Borneo and mainland Southeast Asia suggest the existence of land bridges on the Sunda Shelf throughout the Miocene \citep{Moss1998a}. During the Eocene through early Miocene, the rifting of the South China Sea resulted in subsidence \citep{Morley2013a} and recent subsidence is interpreted to be a result of dynamic topography, triggered by subduction-related mantle flow \citep{Sarr2019a}. In the Miocene, this region was likely a mixture of crystalline lithologies and siliciclastic sediments similar to eastern Borneo. The relatively low-relief of the region contrasts with the high-relief and mafic lithologies of the broader Indonesia Archipelago. We incorporate land area associated with the subsided Sunda Shelf into our modeling.
 
 %From Macdonald text:
 %A critical issue for the paleogeographic  analysis of Indonesia is how to deal with the Sunda Shelf. Although the majority of the Sunda Shelf is currently submerged, large portions of this flat-lying, relatively stable platform of continental crust were likely emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum (38). From a biogeographical standpoint, similarities between the terrestrial biotas of Borneo and mainland Southeast Asia suggest the existence of land bridges on the Sunda Shelf throughout the Miocene (Moss and Wilson, 1998). During the Eocene through early Miocene, the rifting of the South China Sea resulted in subsidence throughout the Sunda Shelf (Morley and Morley, 2013). Grabens associated with this subsidence became freshwater rift lakes that later transitioned to partially-enclosed inland seas and extensive brackish or saline wetland environments. Extensive palynological analysis suggests widespread swamp environments persisting through the Late Miocene (Morley and Morley 2013). Basement highs (e.g. the Natuna Arch, currently subaerially exposed as the largely granitic island of Natuna off SW Borneo, as well as the granitic Tin Islands south of the Malay Peninsula) are typically bounded by Paleogene to Neogene basins dominated by shallow marine clastic fill (Darmadi et al, 2007). Although most paleogeographic reconstructions of the region incorporate some degree of constant exposure of the Sunda Shelf from 20 Ma onwards (Hall, 2013b; Madon et al, 2013), Molnar and Cronin (2015) omit the Sunda Shelf from their paleogeographic model for 5 Ma. We test the sensitivity with two separate scenarios in which the Sunda Shelf is either variably exposed or entirely inundated from 20 Ma to present.
@@ -131,19 +130,17 @@ While there has been an increase in land area associated with arc-continent coll
 
 % \subsection*{GEOCLIM}
 
-To estimate the decrease in steady state \pCOtwo associated with the increase in global weatherability from the growth of the broader Indonesia Archipelago, we use the spatially resolved GEOCLIM model \citep{Godderis2014a, Godderis2017c} wherein a silicate weathering model is coupled to climate models run at varying \pCOtwo levels. We use the DynSoil implementation of the \cite{Gabet2009a} regolith development model which integrates a climatic dependence on the chemical weathering using the formulation of \cite{West2012a}. Changes in silicate weathering lead to changes in \pCOtwo with the climate models being used to estimate temperature and runoff fields which then modulates the silicate weathering
-
-then iteratively
-
-%which iteratively couples box models of surface biogeochemical cycles to climate model output. Estimates of fluxes of species between carbon, alkalinity, phosphorous, and oxygen reservoirs in the ocean and atmosphere are used to calculate \pCOtwo, which is then compared against climate model output computed at various \pCOtwo levels to estimate temperature and runoff at the current \pCOtwo in GEOCLIM. These new temperature and runoff fields are then fed back into the biogeochemical box models to update \pCOtwo, for which new temperature and runoff fields are again estimated. This iteration is continued until a steady state is achieved in all reservoirs.
+To estimate the decrease in steady state \pCOtwo associated with the increase in global weatherability from the growth of the broader Indonesia Archipelago, we use the spatially resolved GEOCLIM model \citep{Godderis2014a, Godderis2017c} wherein a silicate weathering model is coupled to global climate models run at varying \pCOtwo levels. We use the DynSoil implementation of the \citet{Gabet2009a} regolith development model which integrates a climatic dependence on chemical weathering using the formulation of \cite{West2012a}.
 
 In this study, we use temperature and runoff fields from a subset of the GFDL CM2.0 experiments \citep{Delworth2006a, Delworth2006b} for the climate model component of GEOCLIM. These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at a 1\degrees $\times$ 1\degrees resolution. In the `1860 control' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the `+1\%/yr to 2$\times$' experiment, initial conditions are taken from the `1860 control' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The `+1\%/yr to 4$\times$' experiment is identical to the `+1\%/yr to 2$\times$' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. The primary strength of using these three GFDL CM2.0 experiments is that all non-\COtwo forcing agents are held constant, allowing the effect of \pCOtwo on climate to be isolated.
 
-The silicate weathering component of GEOCLIM calculates \COtwo consumption by silicate weathering for each continental grid cell. In previous versions of the model, the silicate weathering rate was a function of temperature and runoff only, and assumed that the bedrock in all continental grid cells had identical chemical compositions (e.g. \citealp{Godderis2014a}). However, more recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component based on work by \citet{Heimsath1997a}, \citet{Gabet2009a}, \citet{West2012a}, \citet{Carretier2014a}, \citet{Godderis2017b}, and \citet{Maffre2018a}, which introduces an additional dependence on topographic slope (see Data Repository). While this introduction of regolith development into GEOCLIM is an important piece of assessing the impact of arc-continent collisions in the Malay Archipelago on \pCOtwo, the relatively high Ca and Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into the silicate weathering component of GEOCLIM. The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) of \citet{Hartmann2012a}. 16 lithologic categories are represented in GLiM, which we simplify into 6 broader categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (Fig. XX; see Data Repository). Each continental grid cell is then assigned one of these lithologic categories. The Ca+Mg concentrations of felsic, intermediate, and mafic grid cells are then assigned based on the mean of MgO and CaO measurements on rocks of each of these lithologic categories in the EarthChem Portal (\url{www.earthchem.org/portal}). The weathering of carbonate grid cells does not contribute to long-term \COtwo consumption and therefore its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since the chemical composition of these two lithologic classes is strongly dependent on its protolith. The chemical composition of siliciclastic sediment is further strongly dependent on its degree of chemical depletion. We therefore explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells during the calibration of the silicate weathering component of GEOCLIM (see below).
+The silicate weathering component of GEOCLIM calculates \COtwo consumption by silicate weathering for each continental grid cell. In previous versions of the model, the silicate weathering rate was a function of temperature and runoff only, and assumed that the bedrock in all continental grid cells had identical chemical compositions (e.g. \citealp{Godderis2014a}). However, more recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component based on work by \citet{Heimsath1997a}, \citet{Gabet2009a}, \citet{West2012a}, \citet{Carretier2014a}, \citet{Godderis2017b}, and \citet{Maffre2018a}, which introduces an additional dependence on topographic slope (see Supplementary Information).
 
-\subsection*{Parameter Calibration}
+While this introduction of regolith development into GEOCLIM is an important piece of assessing the impact of arc-continent collisions in the Malay Archipelago on \pCOtwo, the relatively high Ca and Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into the silicate weathering component of GEOCLIM. The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) of \citet{Hartmann2012a}. 16 lithologic categories are represented in GLiM, which we simplify into 6 broader categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (Fig. XX; see Supplementary Information). Each continental grid cell is then assigned one of these lithologic categories. The Ca+Mg concentrations of felsic, intermediate, and mafic grid cells are then assigned based on the mean of MgO and CaO measurements on rocks of each of these lithologic categories in the EarthChem Portal (\url{www.earthchem.org/portal}). The weathering of carbonate grid cells does not contribute to long-term \COtwo consumption and therefore its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since the chemical composition of these two lithologic classes is strongly dependent on its protolith. The chemical composition of siliciclastic sediment is further strongly dependent on its degree of chemical depletion. We therefore explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells during the calibration of the silicate weathering component of GEOCLIM (see below).
 
-The silicate weathering component of GEOCLIM models the geochemical evolution of a rock particle as it leaves unweathered bedrock and transits through overlying regolith (see Data Repository). As the rock particle transits through the regolith, some fraction of the weatherable phases in the rock particle are dissolved and leaves the regolith column as weathered phases. The fraction of the weatherable phases in the rock particle that are not dissolved after transiting through the regolith column leaves it via erosion. Central to this model is the dissolution rate constant, which describes the rate at which weatherable phases in the rock particle are dissolved as it transits through the regolith:
+% \subsection*{Parameter Calibration}
+
+The silicate weathering component of GEOCLIM models the geochemical evolution of a rock particle as it leaves unweathered bedrock and transits through overlying regolith (see Supplementary Information). As the rock particle transits through the regolith, some fraction of the weatherable phases in the rock particle are dissolved and leaves the regolith column as weathered phases. The fraction of the weatherable phases in the rock particle that are not dissolved after transiting through the regolith column leaves it via erosion. Central to this model is the dissolution rate constant, which describes the rate at which weatherable phases in the rock particle are dissolved as it transits through the regolith:
 
 \begin{equation}
     k_{d}\left(1-e^{-k_{w}q}\right)e^{-\frac{E_{a}}{R}\left(\frac{1}{T}-\frac{1}{T_{0}}\right)}\tau^{\sigma}
@@ -162,8 +159,6 @@ XXX
 
 
 \begin{itemize}
-    \item GEOCLIM and GFDL models
-    \item added lithology (GLiM)
     \item calibration
     \item tested scenarios
     \item in discussion, talk about GFDL limitations (equilibrated by last 100 years?, not changing paleogeography, low resolution, model is quite old)
@@ -202,13 +197,17 @@ XXX
 \begin{figure}
     \centering
     \includegraphics{Manuscript/Figures/regolith_schematic.pdf}
-    \caption{Growth of the broader Indonesia archipelago. Past shorelines are shown in A with resultant area estimates summarized in B. A significant increase in area over the past 5 million years is coincident with cooling and the onset of Northern Hemisphere glaciation as reflected in the benthic oxygen isotope record in C \cite{Zachos2008a}.}
+    \caption{Growth of the broader Indonesia Archipelago. Past shorelines are shown in A with resultant area estimates summarized in B. A significant increase in area over the past 5 million years is coincident with cooling and the onset of Northern Hemisphere glaciation as reflected in the benthic oxygen isotope record in C \cite{Zachos2008a}.}
     \label{fig:my_label}
 \end{figure}
 
 \clearpage
 \newpage
 \footnotesize
+
+\section*{RANDOM STUFF}
+
+\subsection*{Text from Francis draft on shoreline analysis}
 
 \singlespacing
 
@@ -217,7 +216,7 @@ XXX
 
 \end{document}
 
-Text from Francis draft on shoreline analysis:
+
 
 Neogene cooling and the emergence of Indonesia and New Guinea
 
@@ -351,8 +350,3 @@ Fig. 4. Paleogeogrpahic reconstructions of subaerially exposed area of Indonesia
 Fig. 5. Calculated change in total area, area in the tropics, and area of ultramafic and volcanic rocks in the tropics over that last 20 Ma in Indonesia and New Guinea.
 
 Fig. 6. Strontium and Osmium isotope model.
-
-Fig. 1
-
-
-Fig. 2
