Updates from Overleaf

--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -52,9 +52,9 @@
 \newcommand{\dsil}{$d$\xspace}
 
 \setcounter{figure}{0}
-\renewcommand{\thefigure}{DR\arabic{figure}}
+\renewcommand{\thefigure}{SI\arabic{figure}}
 \setcounter{table}{0}
-\renewcommand{\thetable}{DR\arabic{table}}
+\renewcommand{\thetable}{SI\arabic{table}}
 
 \definecolor{Yellow}{rgb}{1,1,0.35}
 %
